--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sql-formatter",
+  "name": "@reeganexe/sql-formatter",
   "version": "15.4.6",
   "description": "Format whitespace in a SQL query to make it more readable",
   "license": "MIT",
@@ -64,7 +64,7 @@
     "grammar": "nearleyc src/parser/grammar.ne -o src/parser/grammar.ts",
     "build:tsup": "tsup src/index.ts --format cjs,esm --sourcemap --dts",
     "build:webpack": "webpack --config webpack.prod.js && cp dist/sql-formatter.min.cjs dist/sql-formatter.min.js",
-    "build": "yarn grammar && npm-run-all --parallel build:tsup build:webpack",
+    "build": "npm-run-all --parallel build:tsup build:webpack",
     "release": "release-it"
   },
   "repository": {
